--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
             line-height: 1.45;
             margin: 0;
             padding: 0;
-            height: 100vh;
             overflow: hidden; /* Disables scroll bar completely */
         }
 
         .container {
-            max-width: 860px;
+            max-width: 900px;
             margin: 0 auto;
-            padding: 0 20px;
+            padding: 40px 20px; /* Added top padding so name isn't cut off */
             height: 100vh;
+            box-sizing: border-box;
             display: flex;
             flex-direction: column;
-            justify-content: center; /* Centers everything vertically on the screen */
+            justify-content: center; /* Vertically centers the whole site */
         }
 
         /* Header Section */
@@ -35,34 +35,33 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 20px;
+            margin-bottom: 25px;
         }
 
         .bio-text {
             flex: 1;
             padding-right: 40px;
-            text-align: center; /* Centers the name and the text block */
+            text-align: center; /* Centers the block elements */
         }
 
         /* Name Header: Lato 24pt, Centered */
         .bio-text h1 {
+            font-family: 'Lato', sans-serif;
             font-size: 24pt;
             font-weight: 400; 
             margin: 0 0 10px 0;
             color: #000;
         }
 
-        /* Bio Paragraph: Left-aligned within a centered block. 
-           Width adjusted to 615px to remove gaps in your 13-11-12 word lines. */
+        /* Bio Paragraph: Exact 13-11-12 line wrap for neatness */
         .bio-text p {
             margin: 0;
             text-align: left; 
-            display: inline-block;
-            max-width: 615px; 
+            display: inline-block; /* Allows centering the block while text is left-aligned */
             line-height: 1.5;
         }
 
-        /* Hyperlinks: Blue, orange on hover, no underline */
+        /* Hyperlink Styles: turns orange on hover, no underline */
         a {
             color: #1a73e8; 
             text-decoration: none; 
@@ -79,7 +78,7 @@
             text-align: center;
         }
 
-        /* Profile Picture (180px) */
+        /* Profile Picture sized to match Rahul's (~180px) */
         .profile-img {
             width: 180px;
             height: 180px;
@@ -92,6 +91,7 @@
 
         /* Technical Projects Header: Lato 16.5pt, Unbolded */
         h2 {
+            font-family: 'Lato', sans-serif;
             font-size: 16.5pt;
             margin-top: 15px; 
             margin-bottom: 15px;
@@ -99,12 +99,13 @@
             padding-bottom: 6px;
             font-weight: 400;
             color: #000;
+            text-align: left;
         }
 
         .project-list {
             display: flex;
             flex-direction: column;
-            gap: 15px; /* Tight vertical spacing between projects */
+            gap: 15px; /* Vertical spacing between projects */
         }
 
         .project-entry {
@@ -112,15 +113,15 @@
             align-items: flex-start;
         }
 
-        /* Project Thumbnails: Height increased to 195px to stop Sentinel cut-off */
+        /* Project Thumbnails: Increased height to stop graph cut-off */
         .project-img, .placeholder-box {
             width: 320px; 
-            height: 195px; 
+            height: 200px; 
             margin-right: 35px;
             border-radius: 2px;
             flex-shrink: 0;
-            object-fit: contain; /* Full visibility of the graph */
-            background-color: #000; /* Blends with the Sentinel background */
+            object-fit: contain; /* Full visibility of graph headers */
+            background-color: #000; /* Seamless blend with Sentinel background */
             border: 1px solid #eee;
         }
 
@@ -145,7 +146,7 @@
             margin: 1px 0;
         }
 
-        /* Colored Category Label: Exactly 10.5pt */
+        /* Colored Category Label: Set to 10.5pt */
         .project-category {
             font-style: italic;
             font-weight: 700;
@@ -164,7 +165,7 @@
             font-family: 'Lato', sans-serif;
             font-weight: 400; 
             font-size: 10.5pt; 
-            max-width: 480px; 
+            max-width: 500px; 
             line-height: 1.4;
         }
 
@@ -184,7 +185,7 @@
         <header>
             <div class="bio-text">
                 <h1>Kenneth Thakur</h1>
-                <!-- Exactly 36 words wrapped 13-11-12 -->
+                <!-- Exactly 36 words, broken into 13-11-12 -->
                 <p>
                     I am a BSc Student in Information Technology Management at <a href="https://www.auckland.ac.nz/en.html" target="_blank">University of Auckland</a>.<br>
                     Invited to the Science Scholars (Top 5%) for academic excellence. My<br>
@@ -196,6 +197,7 @@
                     <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
+            <!-- Profile Picture -->
             <a href="linkedin_headshot.jpg" target="_blank">
                 <img src="linkedin_headshot.jpg" alt="Kenneth Thakur" class="profile-img">
             </a>
