--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
             font-size: 10.5pt; 
             color: #333;
             background-color: #fff;
-            line-height: 1.45;
+            line-height: 1.4;
             margin: 0;
             padding: 0;
-            overflow: hidden; /* Disables scroll bar completely */
+            /* Prevents scrollbar, but we've shortened content to ensure it fits */
+            overflow: hidden; 
         }
 
         .container {
             max-width: 900px;
             margin: 0 auto;
-            padding: 60px 20px 20px 20px; /* Increased top padding to fix photo cut-off */
+            /* Fixed top padding ensures your name/photo are NEVER cut off */
+            padding: 50px 20px 20px 20px; 
             height: 100vh;
+            box-sizing: border-box;
             display: flex;
             flex-direction: column;
-            box-sizing: border-box;
         }
 
         /* Header Section */
@@ -34,13 +36,13 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 20px;
+            margin-bottom: 15px; /* Tightened gap to save space */
         }
 
         .bio-text {
             flex: 1;
             padding-right: 40px;
-            text-align: center; /* Centers the name and bio block */
+            text-align: center;
         }
 
         /* Name Header: Lato 24pt, Unbolded, Centered */
@@ -51,16 +53,16 @@
             color: #000;
         }
 
-        /* Bio Paragraph: Natural wrapping, internally left-aligned */
+        /* Bio Paragraph: Natural wrapping, internally left-aligned for a neat look */
         .bio-text p {
             margin: 0;
             text-align: left; 
             display: inline-block;
-            max-width: 600px; 
-            line-height: 1.5;
+            max-width: 580px; 
+            line-height: 1.45;
         }
 
-        /* Hyperlink Styles: turns orange on hover, no underline */
+        /* Hyperlink Styles: Blue, turns orange on hover, no underline */
         a {
             color: #1a73e8; 
             text-decoration: none; 
@@ -73,14 +75,14 @@
         }
 
         .social-links {
-            margin-top: 12px;
+            margin-top: 10px;
             text-align: center;
         }
 
-        /* Profile Picture: 180px, fully visible */
+        /* Profile Picture: 180px, ensured no clipping */
         .profile-img {
-            width: 180px;
-            height: 180px;
+            width: 170px; /* Reduced slightly to guarantee fit on smaller screens */
+            height: 170px;
             border-radius: 50%;
             object-fit: cover;
             display: block;
@@ -91,10 +93,10 @@
         /* Technical Projects Header: Lato 16.5pt, Unbolded */
         h2 {
             font-size: 16.5pt;
-            margin-top: 15px; 
+            margin-top: 10px; 
             margin-bottom: 12px;
             border-bottom: 1px solid #eee;
-            padding-bottom: 6px;
+            padding-bottom: 5px;
             font-weight: 400;
             color: #000;
             text-align: left;
@@ -104,21 +106,21 @@
             flex-grow: 1;
             display: flex;
             flex-direction: column;
-            justify-content: space-between; /* Spaces entries to bottom of screen */
-            padding-bottom: 20px;
+            /* This distributes the remaining space between projects to reach the bottom */
+            justify-content: space-between; 
+            padding-bottom: 30px;
         }
 
         .project-entry {
             display: flex;
             align-items: flex-start;
-            margin-bottom: 15px; /* Spacing between image/text units */
         }
 
-        /* Project Thumbnails: Contain + Black Background for Sentinel image */
+        /* Project Thumbnails: Sized to ensure they fit without triggering scroll */
         .project-img, .placeholder-box {
-            width: 300px; 
-            height: 175px; 
-            margin-right: 35px;
+            width: 280px; 
+            height: 160px; 
+            margin-right: 30px;
             border-radius: 2px;
             flex-shrink: 0;
             object-fit: contain; 
@@ -161,18 +163,19 @@
 
         /* Project Description: Lato 10.5pt, Unbolded */
         .project-description {
-            margin-top: 5px !important;
+            margin-top: 4px !important;
             color: #444;
             font-family: 'Lato', sans-serif;
             font-weight: 400; 
             font-size: 10.5pt; 
-            max-width: 500px; 
+            max-width: 480px; 
             line-height: 1.4;
         }
 
+        /* Responsive view for tablets/phones */
         @media (max-width: 750px) {
             body { overflow: auto; }
-            .container { height: auto; padding-top: 40px; }
+            .container { height: auto; padding-top: 20px; }
             header, .project-entry { flex-direction: column; }
             .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 15px; }
             .bio-text { padding-right: 0; }
@@ -195,7 +198,7 @@
                     <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
-            <!-- Profile Picture with Padding to prevent clipping -->
+            <!-- Clickable Profile Picture -->
             <a href="linkedin_headshot.jpg" target="_blank">
                 <img src="linkedin_headshot.jpg" alt="Kenneth Thakur" class="profile-img">
             </a>
