--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         .container {
             max-width: 900px;
             margin: 0 auto;
-            /* Safe top padding so name/photo are NEVER cut off */
-            padding: 60px 20px 20px 20px; 
+            /* Reduced top padding to pull everything up from the bottom */
+            padding: 40px 20px 10px 20px; 
             height: 100vh;
             box-sizing: border-box;
             display: flex;
@@ -35,24 +35,24 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         .bio-text {
             flex: 1;
             padding-right: 40px;
-            text-align: center; /* Centers the whole block */
+            text-align: center;
         }
 
         /* Name Header: Lato 24pt, Unbolded, Centered */
         .bio-text h1 {
             font-size: 24pt;
             font-weight: 400; 
-            margin: 0 0 10px 0;
+            margin: 0 0 8px 0;
             color: #000;
         }
 
-        /* Bio Paragraph: Natural wrap, internally left-aligned for neatness */
+        /* Bio Paragraph: Natural wrap, internally left-aligned */
         .bio-text p {
             margin: 0;
             text-align: left; 
@@ -61,7 +61,7 @@
             line-height: 1.45;
         }
 
-        /* Hyperlink Styles: Blue, turns orange on hover, no underline */
+        /* Hyperlink Styles: orange on hover, no underline */
         a {
             color: #1a73e8; 
             text-decoration: none; 
@@ -74,14 +74,14 @@
         }
 
         .social-links {
-            margin-top: 10px;
+            margin-top: 8px;
             text-align: center;
         }
 
-        /* Profile Picture: Sized to Rahul's (~180px) */
+        /* Profile Picture: 170px to save vertical space */
         .profile-img {
-            width: 175px; 
-            height: 175px;
+            width: 170px;
+            height: 170px;
             border-radius: 50%;
             object-fit: cover;
             display: block;
@@ -92,10 +92,10 @@
         /* Technical Projects Header: Lato 16.5pt, Unbolded */
         h2 {
             font-size: 16.5pt;
-            margin-top: 10px; 
-            margin-bottom: 12px;
+            margin-top: 5px; 
+            margin-bottom: 10px;
             border-bottom: 1px solid #eee;
-            padding-bottom: 5px;
+            padding-bottom: 4px;
             font-weight: 400;
             color: #000;
             text-align: left;
@@ -105,25 +105,24 @@
             flex-grow: 1;
             display: flex;
             flex-direction: column;
-            justify-content: space-between; /* Evenly spaces projects to bottom */
-            padding-bottom: 25px;
+            justify-content: space-between; /* Distributes projects to reach the bottom */
+            padding-bottom: 20px;
         }
 
         .project-entry {
             display: flex;
             align-items: flex-start;
-            /* Added "very small space" between entries */
-            margin-bottom: 15px; 
+            margin-bottom: 10px; /* Small space between image units */
         }
 
         .project-entry:last-child {
             margin-bottom: 0;
         }
 
-        /* Project Thumbnails: Contain + Black Background removes sidebars */
+        /* Thumbnails: Height reduced to 150px to ensure the last image isn't cut off */
         .project-img, .placeholder-box {
             width: 280px; 
-            height: 165px; 
+            height: 150px; 
             margin-right: 30px;
             border-radius: 2px;
             flex-shrink: 0;
@@ -143,7 +142,7 @@
 
         .project-info h3 {
             margin: 0;
-            font-size: 1.15em;
+            font-size: 1.1em;
             font-weight: 700;
             color: #000; 
             cursor: default;
@@ -153,7 +152,7 @@
             margin: 1px 0;
         }
 
-        /* Category Label: 10.5pt, bold/italic */
+        /* Category Label: 10.5pt */
         .project-category {
             font-style: italic;
             font-weight: 700;
@@ -161,8 +160,8 @@
         }
 
         .project-links {
-            font-size: 0.95em;
-            margin: 4px 0 !important;
+            font-size: 0.9em;
+            margin: 3px 0 !important;
         }
 
         /* Project Description: Lato 10.5pt, Unbolded */
@@ -172,7 +171,7 @@
             font-family: 'Lato', sans-serif;
             font-weight: 400; 
             font-size: 10.5pt; 
-            max-width: 480px; 
+            max-width: 500px; 
             line-height: 1.4;
         }
 
@@ -201,7 +200,7 @@
                     <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
-            <!-- Clickable Profile Picture sized to match Rahul's sizing -->
+            <!-- Clickable Profile Picture -->
             <a href="linkedin_headshot.jpg" target="_blank">
                 <img src="linkedin_headshot.jpg" alt="Kenneth Thakur" class="profile-img">
             </a>
