--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
             font-size: 10.5pt; 
             color: #333;
             background-color: #fff;
-            line-height: 1.4;
+            line-height: 1.45;
             margin: 0;
             padding: 0;
-            overflow: hidden; /* Disables scroll bar completely */
+            overflow: hidden; /* Disables scroll bar for perfect one-page fit */
         }
 
         .container {
-            max-width: 900px;
+            max-width: 850px;
             margin: 0 auto;
-            /* Reduced top padding to pull everything up from the bottom */
-            padding: 40px 20px 10px 20px; 
+            padding: 50px 20px 20px 20px; /* Safe padding for name/photo */
             height: 100vh;
             box-sizing: border-box;
             display: flex;
             flex-direction: column;
+            justify-content: space-between; /* Stretches content to fill screen height */
         }
 
         /* Header Section */
@@ -35,33 +35,33 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         .bio-text {
             flex: 1;
             padding-right: 40px;
-            text-align: center;
+            text-align: center; /* Centers the whole header block */
         }
 
         /* Name Header: Lato 24pt, Unbolded, Centered */
         .bio-text h1 {
             font-size: 24pt;
             font-weight: 400; 
-            margin: 0 0 8px 0;
+            margin: 0 0 10px 0;
             color: #000;
         }
 
-        /* Bio Paragraph: Natural wrap, internally left-aligned */
+        /* Bio Paragraph: 36 words, natural wrap, left-aligned within centered block */
         .bio-text p {
             margin: 0;
             text-align: left; 
             display: inline-block;
             max-width: 580px; 
-            line-height: 1.45;
+            line-height: 1.5;
         }
 
-        /* Hyperlink Styles: orange on hover, no underline */
+        /* Hyperlink Styles: Blue, turns orange on hover, no underline */
         a {
             color: #1a73e8; 
             text-decoration: none; 
@@ -74,14 +74,14 @@
         }
 
         .social-links {
-            margin-top: 8px;
+            margin-top: 10px;
             text-align: center;
         }
 
-        /* Profile Picture: 170px to save vertical space */
+        /* Profile Picture sized to match Rahul's (~180px) */
         .profile-img {
-            width: 170px;
-            height: 170px;
+            width: 175px;
+            height: 175px;
             border-radius: 50%;
             object-fit: cover;
             display: block;
@@ -92,42 +92,37 @@
         /* Technical Projects Header: Lato 16.5pt, Unbolded */
         h2 {
             font-size: 16.5pt;
-            margin-top: 5px; 
-            margin-bottom: 10px;
+            margin-top: 15px; 
+            margin-bottom: 15px;
             border-bottom: 1px solid #eee;
-            padding-bottom: 4px;
+            padding-bottom: 6px;
             font-weight: 400;
             color: #000;
             text-align: left;
         }
 
         .project-list {
-            flex-grow: 1;
             display: flex;
             flex-direction: column;
-            justify-content: space-between; /* Distributes projects to reach the bottom */
-            padding-bottom: 20px;
+            justify-content: space-between; /* Perfectly spaces projects */
+            flex-grow: 1;
+            padding-bottom: 30px;
         }
 
         .project-entry {
             display: flex;
             align-items: flex-start;
-            margin-bottom: 10px; /* Small space between image units */
         }
 
-        .project-entry:last-child {
-            margin-bottom: 0;
-        }
-
-        /* Thumbnails: Height reduced to 150px to ensure the last image isn't cut off */
+        /* Project Thumbnails: Contain + Black Background for neat graph visibility */
         .project-img, .placeholder-box {
-            width: 280px; 
-            height: 150px; 
-            margin-right: 30px;
+            width: 300px; 
+            height: 175px; 
+            margin-right: 35px;
             border-radius: 2px;
             flex-shrink: 0;
             object-fit: contain; 
-            background-color: #000; 
+            background-color: #000; /* Seamless blend for Sentinel chart */
             border: 1px solid #eee;
         }
 
@@ -142,7 +137,7 @@
 
         .project-info h3 {
             margin: 0;
-            font-size: 1.1em;
+            font-size: 1.15em;
             font-weight: 700;
             color: #000; 
             cursor: default;
@@ -152,7 +147,7 @@
             margin: 1px 0;
         }
 
-        /* Category Label: 10.5pt */
+        /* Colored Category Label: Set to exactly 10.5pt */
         .project-category {
             font-style: italic;
             font-weight: 700;
@@ -160,13 +155,13 @@
         }
 
         .project-links {
-            font-size: 0.9em;
-            margin: 3px 0 !important;
+            font-size: 0.95em;
+            margin: 4px 0 !important;
         }
 
         /* Project Description: Lato 10.5pt, Unbolded */
         .project-description {
-            margin-top: 4px !important;
+            margin-top: 5px !important;
             color: #444;
             font-family: 'Lato', sans-serif;
             font-weight: 400; 
@@ -177,7 +172,7 @@
 
         @media (max-width: 750px) {
             body { overflow: auto; }
-            .container { height: auto; padding-top: 20px; }
+            .container { height: auto; padding: 40px 20px; }
             header, .project-entry { flex-direction: column; }
             .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 15px; }
             .bio-text { padding-right: 0; }
@@ -210,7 +205,7 @@
         <section class="project-list">
             <h2>Technical Projects</h2>
 
-            <!-- Project 1 -->
+            <!-- Sentinel Monitor (Finished Project) -->
             <div class="project-entry">
                 <img src="sentinel_ds_hero.png" alt="Sentinel Monitor" class="project-img">
                 <div class="project-info">
@@ -218,7 +213,8 @@
                     <p>Kenneth Thakur</p>
                     <p class="project-category" style="color: #d93025;">Open Source Intelligence (OSINT) · 2026</p>
                     <div class="project-links">
-                        <a href="#">project page</a> / <a href="#">code</a>
+                        <a href="https://github.com/Kenneth-Thakur/Sentinel-Monitor#readme" target="_blank">project page</a> / 
+                        <a href="https://github.com/Kenneth-Thakur/Sentinel-Monitor" target="_blank">code</a>
                     </div>
                     <p class="project-description">
                         A real-time dashboard for monitoring global conflict signals. Utilizes a custom NLP pipeline to scrub high-velocity news feeds into formal tactical SITREPs.
@@ -226,7 +222,7 @@
                 </div>
             </div>
 
-            <!-- Project 2 -->
+            <!-- Aegis Anomaly Detector -->
             <div class="project-entry">
                 <div class="placeholder-box"> [Aegis Distribution Plot] </div>
                 <div class="project-info">
@@ -242,7 +238,7 @@
                 </div>
             </div>
 
-            <!-- Project 3 -->
+            <!-- Citadel Scanner -->
             <div class="project-entry">
                 <div class="placeholder-box"> [Citadel Network Graph] </div>
                 <div class="project-info">
